--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,12 @@
     src: url(fonts/LexendDeca.ttf);
 }
 .attribution {
-    font-size: 11px; text-align: center;
+    font-size: 11px;
+    text-align: center;
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
+    text-decoration: none;
 }
 body {
     background-color: var(--very-dark-blue);
