--- a/styles.css
+++ b/styles.css
@@ -1,81 +1,122 @@
-:root {
-    --very-dark-blue: hsl(233, 47%, 7%);
-    --white: hsl(0, 0%, 100%);
-    --dark-desaturated-blue: hsl(244, 38%, 16%);
-    --soft-violet: hsl(277, 64%, 61%);
-}
-* {
-    color: var(--white);
-    font-family: "Inter";
+@font-face {
+    font-family: "LexendDeca-Regular";
+    src: url(fonts/LexendDeca-Regular.ttf);
 }
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     src: url(fonts/Inter.ttf);
 }
-@font-face {
-    font-family: 'LexendDeca';
-    src: url(fonts/LexendDeca.ttf);
-}
 .attribution {
-    font-size: 11px;
-    text-align: center;
+    font-size: 11px; text-align: center;
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
-    text-decoration: none;
-}
-body {
-    background-color: var(--very-dark-blue);
-}
-main {
-    width: 1080px;
-    margin: 150px auto auto;
-}
-.heading {
-    margin: 25px 0px;
-    width: 400px;
-    font-weight: 700;
-    font-size: 35px;
-}
-.info{
-    color: hsla(0, 0%, 100%, 0.75);
-    font-size: 14px;
-    font-weight: 400;
-    width: 350px;
-    line-height: 25px;
-    margin-bottom: 70px;
-}
-.stat {
-    font-weight: 700;
-    font-size: 23px;
-    display: inline-block;
-}
-.stat-heading {
-    font-family: "LexendDeca";
-    font-weight: 400;
-    font-size: 12px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: hsla(0, 0%, 100%, 0.6);
-    display: block;
-    margin: 10px 60px 0px 0px;
-}
-.right-stat {
-    margin-right: 0px;
-}
-.insight {
-    color: var(--soft-violet);
-}
-.content {
-    width: 420px;
-    height: 346px;
-    float: left;
-    background-color: var(--dark-desaturated-blue);
-    border-radius: 10px 0px 0px 10px;
-    padding: 50px;
-    padding-left: 70px;
 }
 img {
     filter: grayscale(100%) brightness(35%) sepia(100%) hue-rotate(-130deg) saturate(600%) contrast(0.69);
+}
+body {
+    font-family: "Inter";
+    background-color: hsl(233, 47%, 7%);
+    color: hsl(0, 0%, 100%);
+    font-weight: 400;
+}
+main {
+    background-color: hsl(244, 38%, 16%);
+    border-radius: 10px;
+    margin: 10% auto 5px;
+    height: 223px;
+
+}
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    width: 560px;
+}
+.image {
     border-radius: 0px 10px 10px 0px;
+}
+@media screen and (max-width: 700px) {
+    main {
+        height: 720px;
+    }
+    .flex-container {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 327px;
+    }
+    .image {
+    border-radius: 10px 10px 0px 0px;
+    }
+}
+.content {
+    /* background-color: hsl(244, 38%, 16%); */
+    box-sizing: border-box;
+    height: 223px;
+    padding: 30px 40px 30px 30px;
+}
+@media screen and (max-width: 700px) {
+    .content {
+        height: 480px;
+    }
+}
+h2 {
+    margin: 0px 0px 20px 0px;
+    font-size: 20px;
+    font-weight: 700;
+}
+h2>span {
+    color: hsl(277, 64%, 61%);
+}
+p {
+    font-size: 9px;
+    color: hsla(0, 0%, 100%, 0.75);
+    line-height: 1.5em;
+    margin-bottom: 20px;
+    width: 210px;
+}
+.stats {
+    font-family: "Inter";
+    display: flex;
+    flex-direction: row;
+}
+.stat-heading {
+    font-family: "LexendDeca-Regular";
+    color:hsla(0, 0%, 100%, 0.6);
+    text-transform: uppercase;
+    font-size: 7px;
+    display: inline-block;
+}
+#stat {
+    margin: 5px 0px;
+    font-weight: 700;
+}
+@media screen and (max-width: 700px) {
+    h2, p, .stat {
+        text-align: center;
+    }
+    h2 {
+        font-size: 28px;
+        font-weight: 700;
+        width: 250px;
+    }
+    p {
+        font-size: 15px;
+        line-height: 1.8em;
+        width: 260px;
+}
+    .stats {
+        display: flex;
+        flex-direction: column;
+    }
+    .stat {
+        margin: 10px 0px;
+    }
+    .stat-heading {
+        display: block;
+        font-size: 12px;
+    }
+    #stat {
+        font-size: 20px;
+    }
 }
