--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,17 @@ main {
     flex-direction: row;
     width: 1120px;
 }
+.mobile-image {
+    display: none;
+}
+@media screen and (max-width: 700px) {
+    .desktop-image {
+        display: none;
+    }
+    .mobile-image{
+        display: block;
+    }
+}
 .image {
     border-radius: 0px 10px 10px 0px;
 }
