--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,16 @@ body {
     background-color: hsl(233, 47%, 7%);
     color: hsl(0, 0%, 100%);
     font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
 main {
     background-color: hsl(244, 38%, 16%);
     border-radius: 10px;
-    margin: 10% auto 10px;
+    margin: 0px auto 10px;
     height: 446px;
     width: 1120px;
 }
