--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
     font-family: "LexendDeca-Regular";
     src: url(fonts/LexendDeca-Regular.ttf);
 }
+
 @font-face {
     font-family: "Inter";
     src: url(fonts/Inter.ttf);
 }
+
 body {
     font-family: "Inter";
     background-color: hsl(233, 47%, 7%);
@@ -18,9 +20,11 @@ body {
     min-height: 100vh;
     margin: 0;
 }
-body > div {
+
+body>div {
     padding: 20px;
 }
+
 main {
     background-color: hsl(244, 38%, 16%);
     border-radius: 10px;
@@ -31,19 +35,23 @@ main {
     flex-direction: row;
     width: 1120px;
 }
+
 .content {
     box-sizing: border-box;
     height: 446px;
     padding: 60px 40px 30px 60px;
 }
+
 h2 {
     margin: 0px 0px 40px 0px;
     font-size: 40px;
     font-weight: 700;
 }
+
 h2>span {
     color: hsl(277, 64%, 61%);
 }
+
 p {
     font-size: 18px;
     color: hsla(0, 0%, 100%, 0.75);
@@ -51,42 +59,51 @@ p {
     margin-bottom: 40px;
     width: 420px;
 }
+
 .stats {
     font-family: "Inter";
     display: flex;
     justify-content: space-between;
     width: 420px;
 }
+
 .the-stat {
     font-size: 32px;
     margin: 5px 0px;
     font-weight: 700;
 }
+
 .stat-heading {
     font-family: "LexendDeca-Regular";
-    color:hsla(0, 0%, 100%, 0.6);
+    color: hsla(0, 0%, 100%, 0.6);
     text-transform: uppercase;
     font-size: 14px;
     display: block;
 }
+
 img {
     filter: grayscale(100%) brightness(35%) sepia(100%) hue-rotate(-130deg) saturate(600%) contrast(0.69);
 }
+
 .mobile-image {
     display: none;
 }
+
 .image {
     border-radius: 0px 10px 10px 0px;
 }
+
 .attribution {
     margin: 0px auto;
     font-size: 11px;
     text-align: center;
 }
+
 .attribution a {
     color: hsl(228, 45%, 44%);
     text-decoration: none;
 }
+
 @media screen and (max-width: 700px) {
     main {
         height: 720px;
@@ -95,47 +112,60 @@ img {
         flex-direction: column-reverse;
         width: 327px;
     }
+
     .content {
         height: 480px;
         padding: 30px 40px 30px 30px;
     }
-    h2, p, .stat {
+
+    h2,
+    p,
+    .stat {
         text-align: center;
     }
+
     h2 {
         margin-bottom: 20px;
         font-size: 28px;
         font-weight: 700;
         width: 250px;
     }
+
     p {
         font-size: 15px;
         line-height: 1.8em;
         width: 260px;
         margin-bottom: 20px;
     }
+
     .stats {
         display: flex;
         flex-direction: column;
         width: inherit;
     }
+
     .stat {
         margin: 10px 0px;
     }
+
     .the-stat {
         font-size: 20px;
     }
+
     .stat-heading {
         display: block;
         font-size: 12px;
     }
+
     .image {
         border-radius: 10px 10px 0px 0px;
     }
+
     .desktop-image {
         display: none;
     }
-    .mobile-image{
+
+    .mobile-image {
         display: block;
     }
 }
